--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">GameHub</string>
+    <string name="sorry_something_went_wrong">Sorry, something went wrong.</string>
 </resources>
